# waldo

./: CMakeLists.txt  LICENSE.md
apps/: center_stl.cpp  render.cpp
geometries/: sydler.stl  teapot.stl
src/: ReadSTL.cpp  ReadSTL.hpp
test/: TestReadSTL.cpp
